# -

./: .gitignore  LinkGrammar.cabal  Main.hs  README.org  TODO.org  Vorec.hs  preprocess.sh  ptest  test.dict  test.txt
Control/Monad/: Sample.hs  Voretion.hs
Data/: Nontransitive.hs  PrettyPrint.hs  TernaryTree.hs
LinkGrammar/: AST.hs  Parsec.hs  Parser.happy  Parser.y  Process.hs  Tokenize.x
Voretion/: Config.hs  Kobenation.hs
examples/: ru.grammar
examples/tsar/: Makefile  tsar.dict
test/: contradict.dict  math.dict  ordering.dict  small.dict
