name:                LinkGrammar

version:             0.1.0.0

synopsis:            Parser of link grammar

license:             PublicDomain

license-file:        LICENSE

author:               

maintainer:          

category:            NLP

build-type:          Simple

cabal-version:       >=1.10

executable Voretion
  main-is:             Vorec.hs
  
  build-depends:       base >=4.8 && <4.9
                     , transformers >=0.4 && <0.5
                     , parsec
                     , MonadRandom
                     , containers >= 0.5 && < 0.6
                     , rosezipper
                     , mtl >= 2.2 && < 2.3
                     , vector >= 0.11 && <0.12
                     , binary >= 0.7 && <0.8
                     , bytestring >= 0.10 && <0.11
  
  -- Directories containing source files.
  -- hs-source-dirs:      
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- build-tools:         alex, happy
  
  -- Base language which the package is written in.
  default-language:    Haskell2010


executable LinkGrammar
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  --other-modules:       LinkGrammar.Tokenize, LinkGrammar.Parser
  
  -- LANGUAGE extensions used by modules in this package.
  other-extensions:    FlexibleInstances
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.8 && <4.9
                     , cpphs >=1.19 && <1.20
                     , transformers >=0.4 && <0.5
                     , array >=0.5 && <0.6
                     , parsec
                     , containers >= 0.5 && < 0.6
                     , rosezipper
                     , mtl >= 2.2 && < 2.3
                     , vector >= 0.11 && <0.12
                     , binary >= 0.7 && <0.8
                     , bytestring >= 0.10 && <0.11
  
  -- Directories containing source files.
  -- hs-source-dirs:      
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- build-tools:         alex, happy
  
  -- Base language which the package is written in.
  default-language:    Haskell2010

