name:                LinkGrammar

version:             0.1.0.0

synopsis:            Parser of link grammar

license:             PublicDomain

license-file:        LICENSE

author:               

maintainer:          

category:            NLP

build-type:          Simple

cabal-version:       >=1.10

executable Voretion
  main-is:             Vorec.hs
  
  build-depends:       base >=4.8 && <5.0
                     , containers
                     , transformers
                     , rosezipper
                     , mtl
                     , vector
                     , binary
                     , bytestring
                     , random
                     , lens
                     , optparse-applicative
                     , deepseq
                     , base64-bytestring
  
  -- Directories containing source files.
  -- hs-source-dirs:      
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- build-tools:         alex, happy
  
  -- Base language which the package is written in.
  default-language:    Haskell2010


executable LinkGrammar
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  --other-modules:       LinkGrammar.Tokenize, LinkGrammar.Parser
  
  -- LANGUAGE extensions used by modules in this package.
  other-extensions:    FlexibleInstances
  
  -- Other library packages from which modules are imported.
  build-depends:       base
                     , optparse-applicative
                     , transformers
                     , array
                     , parsec
                     , containers
                     --, rosezipper
                     , mtl
                     , vector
                     , binary
                     , bytestring
                     , lens
                     , deepseq
  
  -- Directories containing source files.
  -- hs-source-dirs:      
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- build-tools:         alex, happy
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  ghc-options: -prof -auto-all -caf-all -fforce-recomp  -fprof-auto-exported
